Added tracker to homepage

--- a/index.htm
+++ b/index.htm
@@ -96,8 +96,9 @@ Anyone can create their own personal sandbox on the web and put as much or as li
 </ul>
 </li>
 </ul>
-<h2>Old projects<span id="Old-projects"></span></h2>
+<h2>Other projects<span id="Other-projects"></span></h2>
 <ul>
+<li><em>(2024)</em> /s4scraft/ activity tracker, updates sporadically — <a href="/misc/s4scraft.htm"><code>/misc/s4scraft.htm</code></a></li>
 <li><em>(2016–2017)</em> <em><strong>[retired]</strong></em> lightweight futaba-like messageboard system in C — <a href="https://github.com/microsounds/akari-bbs"><code>microsounds/akari-bbs</code></a></li>
 <li><em>(2016)</em> CPU-based tripcode generator for futaba-like imageboards — <a href="https://github.com/microsounds/tripforce"><code>microsounds/tripforce</code></a></li>
 <li><em>(2016)</em> <em><strong>[retired]</strong></em> command-line utility for scraping Bandcamp albums — <a href="https://github.com/microsounds/bc-dl"><code>microsounds/bc-dl</code></a></li>
