s4scraft-tracker: Fixed activity graph ignoring hourly data, mobile layout

--- a/misc/s4scraft.htm
+++ b/misc/s4scraft.htm
@@ -15,6 +15,7 @@ margin: 10px;
 color: maroon;
 background: #ffe url("https://s.4cdn.org/image/fade.png") top center repeat-x;
 }
+img { max-width: 100%; } # mobile
 </style>
 </head>
 <p><a href="../"><img src="/static/button/badge.png" alt="ico" /> <em>Back to homepage</em></a></p>
@@ -55,16 +56,16 @@ background: #ffe url("https://s.4cdn.org/image/fade.png") top center repeat-x;
  4	Kiyyun            7   2024-04-19  22:16:11+00:00
  5	revega            4   2024-04-19  15:49:46+00:00
  6	Claybacon         4   2024-04-16  04:27:38+00:00
- 7	doopeers          3   2024-04-18  16:49:09+00:00
- 8	SpaceMarineGamin  3   2024-04-17  06:49:09+00:00
+ 7	SpaceMarineGamin  3   2024-04-17  06:49:09+00:00
+ 8	doopeers          3   2024-04-18  16:49:09+00:00
  9	12DAMDO           3   2024-04-18  19:48:59+00:00
 10	niceposter765     2   2024-04-18  20:18:34+00:00
-11	moorat            1   2024-04-18  21:49:10+00:00
-12	duders_           1   2024-04-17  10:19:28+00:00
-13	Zielony898        1   2024-04-18  20:18:34+00:00
-14	MadokaMagic       1   2024-04-18  21:49:10+00:00
-15	JNakz64           1   2024-04-16  16:49:11+00:00
-16	Galantro985       1   2024-04-17  23:18:59+00:00
+11	Zielony898        1   2024-04-18  20:18:34+00:00
+12	moorat            1   2024-04-18  21:49:10+00:00
+13	MadokaMagic       1   2024-04-18  21:49:10+00:00
+14	JNakz64           1   2024-04-16  16:49:11+00:00
+15	Galantro985       1   2024-04-17  23:18:59+00:00
+16	duders_           1   2024-04-17  10:19:28+00:00
 17	DookieDookster    1   2024-04-18  18:20:21+00:00
 </code></pre>
 <p>Made with Free Software™, <a href="https://github.com/microsounds/microsounds.github.io/blob/master/misc/s4scraft-tracker/status.sh">view source code</a> for this page.</p>
