misc/last-fm: nothing important

--- a/misc/last-fm.htm
+++ b/misc/last-fm.htm
@@ -54,7 +54,8 @@
 
 	<div class="split">
 	<strong class="heading">About Me</strong>
-	<h1>syncopated <span style="color: #CCC;">redacted</span><br/>◡‿◡✿</h1>
+	<h1>syncopated <span style='color:#809F88;'>m</span><span style='color:#759986;'>i</span><span style='color:#6A9484;'>c</span><span style='color:#608F82;'>r</span><span style='color:#558A80;'>o</span><span style='color:#4A857E;'>s</span><span style='color:#407F7C;'>o</span><span style='color:#357A7A;'>u</span><span style='color:#2A7578;'>n</span><span style='color:#207076;'>d</span><span style='color:#156B74;'>s</span><br/>◡‿◡✿</h1>
+
 	<center><sup><a href="/lost">i'd finish my backlog if I stayed up for 16 days straight</a></sup></center>
 	<center><img src="last-fm-res/fall.gif" /></center>
 	<center><img src="last-fm-res/the-grid.gif" /></center>
