Joined vocaloid webring

--- a/index.htm
+++ b/index.htm
@@ -156,6 +156,45 @@ You can also contact me by e-mail at the following address:</p>
 <p><em>Please type it out manually, this address cannot be copy pasted.<br/>
 You should also know better than to paste <a href="http://thejh.net/misc/website-terminal-copy-paste">untrusted text from a web page</a> anyway.</em></p>
 <h2>Links<span id="Links"></span></h2>
+<!-- vocaloid webring widget -->
+<div class="left" style="margin: 6px;" id="vocaloid-webring">
+<style>
+	@font-face {
+		font-family:'Orbi';
+		src:url(https://files.catbox.moe/q521mw.ttf);
+	}
+	@font-face {
+		font-family:'Pixel Operator';
+		 src:url(https://files.catbox.moe/kyguk9.ttf);
+	}
+	.webring-container {
+		font-style: italic;
+		padding: 10px;
+		width: 150px;
+		text-align: center;
+		background-color: #FFFFFF10;
+	}
+	.webring-info {
+		font-family: Orbi;
+		font-size: 20px;
+		color: #F07DB4;
+	}
+	.webring-links {
+		font-family: Pixel Operator;
+		font-size: 16px;
+	}
+</style>
+<table class="webring-container center" >
+	<tr>
+		<td><img src='https://adilene.net/webring/images/vocaloid.png' />
+			<div class="webring-info blink">VOCALOID WEBRING</div>
+			<div class="webring-links">
+				[ <a href='https://webring.adilene.net/index.php' target='_parent'>Index</a> · <a href='https://webring.adilene.net/members.php' target='_parent'>Members</a> ]
+			</div>
+		</td>
+	</tr>
+</table>
+</div>
 <div class="center">
 <p><a href="https://debian.org/distrib"><img src="/static/button/debian.png" alt="ico-debian" /></a>
 <a href="https://nano-editor.org"><img src="/static/button/nano.png" alt="ico-nano" /></a>
