html validation, scoped styles aren't real!

--- a/index.htm
+++ b/index.htm
@@ -158,35 +158,9 @@ You should also know better than to paste <a href="http://thejh.net/misc/website
 <h2>Links<span id="Links"></span></h2>
 <!-- vocaloid webring widget -->
 <div class="left" style="margin: 6px;" id="vocaloid-webring">
-<style>
-	@font-face {
-		font-family:'Orbi';
-		src:url(https://files.catbox.moe/q521mw.ttf);
-	}
-	@font-face {
-		font-family:'Pixel Operator';
-		 src:url(https://files.catbox.moe/kyguk9.ttf);
-	}
-	.webring-container {
-		font-style: italic;
-		padding: 10px;
-		width: 150px;
-		text-align: center;
-		background-color: #FFFFFF10;
-	}
-	.webring-info {
-		font-family: Orbi;
-		font-size: 20px;
-		color: #F07DB4;
-	}
-	.webring-links {
-		font-family: Pixel Operator;
-		font-size: 16px;
-	}
-</style>
 <table class="webring-container center" >
 	<tr>
-		<td><img src='https://adilene.net/webring/images/vocaloid.png' />
+		<td><img alt="miku and friends" src='https://adilene.net/webring/images/vocaloid.png' />
 			<div class="webring-info blink">VOCALOID WEBRING</div>
 			<div class="webring-links">
 				[ <a href='https://webring.adilene.net/index.php' target='_parent'>Index</a> · <a href='https://webring.adilene.net/members.php' target='_parent'>Members</a> ]
