--- a/misc/last-fm.htm
+++ b/misc/last-fm.htm
@@ -313,6 +313,7 @@
 			<img src="last-fm-res/doki2.gif" />
 		</sup>
 	</center>
+	<center><img src="https://lastfmtopalbums.dinduks.com/patchwork.php?user=microsounds_&amp;period=overall&amp;rows=5&amp;cols=2&amp;imageSize=150" /></center>
 	<center><img src="last-fm-res/last-fm-level.png" /></center>
 	<center><sup style="color: #CCC;">(Assuming 2.34375MiB/min 320kbps CBR MP3)</sup></center>
 	<center><img src="last-fm-res/flowers.gif" /></center>
