notes/figures: bookoff is pretty nice sometimes

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2024/4/27 -->
+<!-- updated 2024/6/18 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌒 Sat, Apr 27th, 2024</p>
+<p>Last updated 🌘 Tue, Jun 18th, 2024</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -149,6 +149,7 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
+	[ '1131770', 'e27f8', 'good smile rozen maiden suiseiseki nendoroid #1710 (2022)' ],
 	[ 'p2222288', '88662', 'taito artist masterpiece+ miku birthday 2024 flower ver. (2024)' ],
 	[ 'p2256547', 'ae9de', 'good smile pop up parade miku v2 translucent color ver. (2024)' ],
 	[ 'p1941522', 'a8683', 'max factory plamatea miku 16th birthday ver. model kit (2024)' ],
