github actions ips are still blacklisted on mfc lol

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -219,14 +219,14 @@ var figs = [
 	[ '1796928', '82839', 'max limited yurayura head miku (2023)' ],
 	[ '1473760', 'fe3fe', 'good smile inugami korone nendoroid #1861 (2022)' ],
 	[ '1473759', '90d6e', 'good smile nekomata okayu nendoroid #1860 (2022)' ],
-	[ '1782785', 'da0ba', 'furyu exceed creative miku cyber future ver. (2023)' ],
+	[ '1782785', 'e7859', 'furyu exceed creative miku cyber future ver. (2023)' ],
 	[ '1618453', '71b24', 'good smile pop up parade needy girl overdose kangel (2023)' ],
 	[ '1780064', '90bb0', 'taito miku artist masterpiece+ birthday 2023 ver. (2023)' ],
 	[ '1873722', '9565c', 'taito miku fashion figure uniform ver. (2024)' ],
 	[ '1696654', '98c36', 'furyu miku flower fairy noodle stopper (2023)' ],
 	[ '945860', '6ae97', 'good smile miku nendoroid doll (2020)' ],
 	[ '1226915', '4beb0', 'good smile miku date outfit ver. nendoroid doll (2023)' ],
-	[ '1616455', '1154b', 'good smile pop up parade ver. L DECO*27 vampire jirai miku (2023)' ],
+	[ '1616455', '99945', 'good smile pop up parade ver. L DECO*27 vampire jirai miku (2023)' ],
 	[ '1779734', 'fb6e1', 'taito miku fashion figure subculture ver. (2023)' ],
 	[ '1335582', '0d57a', 'sega sakura miku v3 SPM (2022)' ],
 	[ '1571286', '15051', 'sega miku christmas 2022 SPM (2022)' ],
@@ -256,7 +256,7 @@ var figs = [
 	[ '886807', '5b4b2', 'taito sakura miku 2020 ver. (2020)' ],
 	[ '1216990', '90105', 'bandai espresto racing miku 2020 (2021)' ],
 	[ '1035745', 'ba361', 'sega project diva mega 39\'s breathe you miku SPM (2021)' ],
-	[ '1112719', '82ba8', 'taito miku big nuigurumi plush (2021)' ],
+	[ '1112719', '03063', 'taito miku big nuigurumi plush (2021)' ],
 	[ '756832', 'd4634', 'taito hatsune miku 2nd season Spring ver. (2019)' ],
 	[ '776143', '679aa', 'taito hatsune miku 2nd season Summer ver. (2019)' ],
 	[ '4741', '89b30', 'sega hatsune miku EX figure (2008)' ],
@@ -384,7 +384,7 @@ Most, if not all air shipping options from Japan start at ¥4,000, single item s
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; 2015-2024 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2025 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
