--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2024/11/25 -->
+<!-- updated 2025/1/15 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌓 Mon, Nov 25th, 2024</p>
+<p>Last updated 🌑 Wed, Jan 15th, 2025</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -149,6 +149,10 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
+	[ '2257530', '6fd05', 'taito coreful re (zero rem nekomimi maid ver.)' ],
+	[ '2247777', '10a51', 'sega luminasta miku project diva mega 39\'s 15th anniv. (2024)' ],
+	[ '22229', '658b2', 'sega hatsune miku PM figure (2010)' ],
+	[ '555317', 'e5cf0', 'taito miku x shuumai-kun plush (2012)' ],
 	[ 'p625061', '9ccb6', 'sega dodeka jumbo fuwa fuwa nuigurumi BIG MICKER!! (2018)' ],
 	[ '1916908', 'fbd46', 'sega fuwa puchi nuigurumi L miku magical mirai 2023 plush (2023)' ],
 	[ '1877039', '26931', 'good smile dress up darling kuroe shikuzu nendoroid #2172 (2023)' ],
