notes/gpus: Added low profile intel arc cards

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -349,6 +349,13 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: left">Workstation card.</td>
 </tr>
 <tr>
+<td style="text-align: left">Intel Arc Pro A40</td>
+<td style="text-align: center">2023</td>
+<td style="text-align: center">50W</td>
+<td style="text-align: center">5222</td>
+<td style="text-align: left">Workstation card, 6GB VRAM, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong></td>
+</tr>
+<tr>
 <td style="text-align: left">Nvidia T600</td>
 <td style="text-align: center">2021</td>
 <td style="text-align: center">40W</td>
@@ -432,6 +439,13 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: center">30-75W</td>
 <td style="text-align: center">5437</td>
 <td style="text-align: left">4GB VRAM, single and OC’d dual slot versions, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong></td>
+</tr>
+<tr>
+<td style="text-align: left">Intel Arc Pro A50</td>
+<td style="text-align: center">2023</td>
+<td style="text-align: center">75W</td>
+<td style="text-align: center">5222</td>
+<td style="text-align: left">Workstation card, 6GB VRAM, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong></td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>Intel Arc A380</strong></td>
