notes/lp-gpus: corrected typos

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -374,7 +374,7 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: right">4GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">30W</td>
 <td style="text-align: center">3873</td>
-<td style="text-align: left">Matrox LP single-slot passively cooled version, <strong>2-slot versions go harder</strong>, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong>.</td>
+<td style="text-align: left">Matrox LP single-slot passively cooled version, <strong>2-slot versions go harder</strong>, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong>.</td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia Quadro P1000</td>
@@ -390,7 +390,7 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: right">6GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">50W</td>
 <td style="text-align: center">5222</td>
-<td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong>, single slot version of A50.</td>
+<td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong>, single slot version of A50.</td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia T600</td>
@@ -515,7 +515,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: right">4GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">50W</td>
 <td style="text-align: center">4699</td>
-<td style="text-align: left"><em>Full height versions are 75W<sup>(G3D: 5437)</sup></em>, various LP single and OC’d dual slot versions available, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong>.</td>
+<td style="text-align: left"><em>Full height versions are 75W<sup>(G3D: 5437)</sup></em>, various LP single and OC’d dual slot versions available, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong>.</td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia GeForce GTX 1630</td>
@@ -539,7 +539,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: right">6GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">75W</td>
 <td style="text-align: center">5222</td>
-<td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong></td>
+<td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong></td>
 </tr>
 <tr>
 <td style="text-align: left"><span class="blink"><strong>Intel Arc A380</strong></span></td>
@@ -547,7 +547,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: right">6GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">75W</td>
 <td style="text-align: center">6239</td>
-<td style="text-align: left"><strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong></td>
+<td style="text-align: left"><strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong></td>
 </tr>
 <tr>
 <td style="text-align: left"><span class="blink"><strong>Nvidia GeForce GTX 1050ti</strong></span></td>
