notes/lp-gpu: added rtx a400

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -393,6 +393,14 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong>, single slot version of A50.</td>
 </tr>
 <tr>
+<td style="text-align: left">Nvidia RTX A400</td>
+<td style="text-align: center">2024</td>
+<td style="text-align: right">4GB<br/><sup>GDDR6</sup></td>
+<td style="text-align: right">50W</td>
+<td style="text-align: center">5788</td>
+<td style="text-align: left">Workstation card.</td>
+</tr>
+<tr>
 <td style="text-align: left">Nvidia T600</td>
 <td style="text-align: center">2021</td>
 <td style="text-align: right">4GB<br/><sup>GDDR6</sup></td>
